<resources>
    <string name="app_name">个人助理</string>
    <string name="personal_balance">个人收支</string>
    <string name="data_manage">日程管理</string>
    <string name="alarm_remind">闹钟提醒</string>
    <string name="system_settings">系统设置</string>
    <string name="change_background">更换背景</string>
    <string name="toolbar_scan">Scan</string>
    <string name="toolbar_save">Save</string>
    <string name="activity_settings">设置</string>
    <string name="activity_add_date">添加新日子</string>
    <string name="activity_alarm">闹钟提醒</string>
    <string name="activity_balance">个人收支</string>
    <string name="barcode">将条形码放入框内，即可自动扫描</string>
    <string name="qrcode">将二维码放入框内，即可自动扫描</string>
    <string name="start_identify">开始识别</string>
    <string name="stop_identify">暂停识别</string>
    <string name="open_light">开灯</string>
    <string name="close_light">关灯</string>
    <string name="add_date_title">标题</string>
    <string name="add_date_input_title">点击这里输入事件的标题</string>
    <string name="add_date_date">日期</string>
    <string name="add_date_type">分类</string>
    <string name="add_date_add_type">计划</string>
    <string name="add_date_note">备注</string>
    <string name="activity_add_date_event">点击这里输入事件的内容</string>
    <string name="toolbar_edit">编辑</string>
    <string name="toolbar_detail">详细</string>
    <string name="delete">删除</string>
    <string name="add_date_priority">优先级</string>
    <string name="radiobtn_none">无</string>
    <string name="radiobtn_first">!</string>
    <string name="radiobtn_second">!!</string>
    <string name="radiobtn_third">!!!</string>
    <string name="nav_scan">扫一扫</string>
    <string name="toolbar_search">搜索</string>
    <string name="toolbar_add">添加</string>
    <string name="add_date_notice">提醒</string>
    <string name="add_date_alarm">闹钟</string>
    <string name="alarm_rings">铃声</string>
    <string name="alarm_shake">振动</string>
    <string name="alarm_label">标签</string>
    <string name="alarm_repeat">重复</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="string_null">无</string>
    <string name="rings_default">千军万马</string>
    <string name="date_search">请输入搜索的日程标题</string>
    <string name="balance_income">收入</string>
    <string name="balance_expand">支出</string>
    <string name="add_balance_content">收支内容</string>
    <string name="add_balance_number">收支金额</string>
    <string name="add_balance_input_content">点击这里输入收支的内容</string>
    <string name="add_balance_input_number">点击这里输入收支的金额</string>
    <string name="date_type">日程类型</string>
    <string name="date_title">日程标题</string>
    <string name="date_priority">日程优先级</string>
    <string name="balance_title">收支标题</string>
    <string name="searchview_hint">请先选择查找</string>
    <string name="app_language">语言</string>
    <string name="simple_chinese">简体中文</string>
</resources>
