<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zucc.ldh1135.secretary.DateManager.AddDateActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_date_title"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/colorBlack"/>

                <EditText
                    android:id="@+id/add_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="16dp"
                    android:textColorHint="#AAAAAA"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_date"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_date_date"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/current_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:textSize="20sp"
                    android:layout_marginEnd="16dp">

                </TextView>


            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_type"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_date_type"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/add_date_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="16dp"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_notice"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_date_notice"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"/>

                <Switch
                    android:id="@+id/switch_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="16dp"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_alarm"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/border"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv_notice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_date_alarm"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginStart="16dp" />

                <TextView
                    android:id="@+id/tv_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2017-07-07"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="16dp"/>

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_priority"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_date_priority"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    android:layout_marginStart="16dp"/>

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="16dp">

                    <RadioButton
                        android:id="@+id/radiobtn_none"
                        android:text="@string/radiobtn_none"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radiobtn_first"
                        android:text="@string/radiobtn_first"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"/>

                    <RadioButton
                        android:id="@+id/radiobtn_second"
                        android:text="@string/radiobtn_second"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"/>

                    <RadioButton
                        android:id="@+id/radiobtn_third"
                        android:text="@string/radiobtn_third"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"/>

                </RadioGroup>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_date_note"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp"/>

                <EditText
                    android:id="@+id/add_date_event"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:background="@drawable/bg_edittext_normal"
                    android:padding="5dip"
                    android:textColorHint="#AAAAAA"
                    android:textSize="16sp"
                    android:gravity="top"
                    android:layout_marginTop="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:maxLines="7"/>


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_del"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_edittext_focused"
                    android:text="@string/delete"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

            </FrameLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
